--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "REST",
     "OAuth"
   ],
-  "main": ".",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
